@@ -1,36 +1,50 @@
 \name{BunchKaufman-methods}
+\title{Bunch-Kaufman Decomposition Methods}
 \docType{methods}
 \alias{BunchKaufman}
 \alias{BunchKaufman-methods}
 \alias{BunchKaufman,dspMatrix-method}
 \alias{BunchKaufman,dsyMatrix-method}
-\title{Bunch-Kaufman Decomposition Methods}
+\alias{BunchKaufman,matrix-method}
 \description{
   The Bunch-Kaufman Decomposition of a square symmetric matrix \eqn{A}
   is \eqn{A = P LDL' P'} where \eqn{P} is a permutation matrix, \eqn{L}
   is \emph{unit}-lower triangular and \eqn{D} is \emph{block}-diagonal
   with blocks of dimension \eqn{1\times 1}{1 x 1} or \eqn{2\times2}{2 x 2}.
+
+  This is generalization of a pivoting \eqn{LDL'} Cholesky decomposition.
 }
 \usage{
-BunchKaufman(x, \dots)
+\S4method{BunchKaufman}{dsyMatrix}(x, \dots)
+\S4method{BunchKaufman}{dspMatrix}(x, \dots)
+\S4method{BunchKaufman}{matrix}(x, uplo = NULL, \dots)
 }
 \arguments{
   \item{x}{a symmetric square matrix.}
+  \item{uplo}{optional string, \code{"U"} or \code{"L"} indicating which
+    \dQuote{triangle} half of \code{x} should determine the result.  The
+    default is \code{"U"} unless \code{x} has a \code{uplo} slot which is
+    the case for those inheriting from class \code{\linkS4class{symmetricMatrix}},
+    where \code{x@uplo} will be used.}
   \item{\dots}{potentially further arguments passed to methods.}
 }
 \section{Methods}{
   Currently, only methods for \bold{dense} numeric symmetric matrices
-  are implemented.
+  are implemented.  To compute the Bunch-Kaufman decomposition, the methods
+  use either one of two Lapack routines:
   \describe{
-    \item{\code{x = "dspMatrix"}}{uses Lapack routine \code{dsptrf},}
-    \item{\code{x = "dsyMatrix"}}{uses Lapack routine \code{dsytrf},
-      computing the Bunch-Kaufman decomposition.}
+    \item{\code{x = "dspMatrix"}}{routine \code{dsptrf()}; whereas}
+    \item{\code{x = "dsyMatrix"}}{, and}
+    \item{\code{x = "matrix"}}{use \code{dsytrf()}.}
   }
 }
 \value{
   an object of class \code{\linkS4class{BunchKaufman}}, which can also
-  be used as a (triangular) matrix directly.
-%% FIXME: Really need an expand() method, in order to *work* with the result!
+  be used as a (triangular) matrix directly.  Somewhat amazingly,
+  it inherits its \code{uplo} slot from \code{x}.% FIXME?
+}
+\details{
+  FIXME: We really need an \code{expand()} method in order to \emph{work} with the result!
 }
 \references{
   The original LAPACK source code, including documentation;
