@@ -12,6 +12,7 @@ SEXP dsyMatrix_norm(SEXP obj, SEXP type);
 SEXP dsyMatrix_rcond(SEXP obj, SEXP type);
 SEXP dsyMatrix_solve(SEXP a);
 SEXP dsyMatrix_trf(SEXP x);
+SEXP    matrix_trf(SEXP x, SEXP uploP);
 double get_norm_sy(SEXP obj, const char *typstr);
 
 #endif
